[gd_scene load_steps=4 format=3 uid="uid://b51d8j47b4cuc"]

[ext_resource type="Texture2D" uid="uid://d1nkv5q1lcph5" path="res://images/user_interface/main_menu.png" id="1_0fiwh"]
[ext_resource type="Script" path="res://scripts/load_game_menu.gd" id="1_iwuhl"]
[ext_resource type="Theme" uid="uid://sue4tlr8wwrf" path="res://resources/themes/default.tres" id="3_dp6n7"]

[node name="load_game_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iwuhl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0fiwh")
centered = false

[node name="next" type="Button" parent="."]
custom_minimum_size = Vector2(400, 100)
layout_mode = 0
offset_left = 1281.0
offset_top = 490.0
offset_right = 1681.0
offset_bottom = 590.0
theme = ExtResource("3_dp6n7")
text = "další"

[node name="previous" type="Button" parent="."]
custom_minimum_size = Vector2(400, 100)
layout_mode = 0
offset_left = 219.0
offset_top = 484.0
offset_right = 619.0
offset_bottom = 584.0
theme = ExtResource("3_dp6n7")
text = "předchozí"

[node name="load" type="Button" parent="."]
custom_minimum_size = Vector2(400, 100)
layout_mode = 0
offset_left = 733.0
offset_top = 659.0
offset_right = 1133.0
offset_bottom = 759.0
theme = ExtResource("3_dp6n7")
text = "načíst"

[node name="main_menu" type="Button" parent="."]
custom_minimum_size = Vector2(400, 100)
layout_mode = 0
offset_left = 734.0
offset_top = 891.0
offset_right = 1134.0
offset_bottom = 991.0
theme = ExtResource("3_dp6n7")
text = "hlavní nabídka"

[node name="delete" type="Button" parent="."]
custom_minimum_size = Vector2(400, 100)
layout_mode = 0
offset_left = 731.0
offset_top = 777.0
offset_right = 1131.0
offset_bottom = 877.0
theme = ExtResource("3_dp6n7")
text = "Já tenhle save už nechci!"

[node name="save_name" type="Label" parent="."]
layout_mode = 0
offset_left = 701.0
offset_top = 522.0
offset_right = 1187.0
offset_bottom = 598.0
text = "test"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 747.0
offset_top = 342.0
offset_right = 1145.0
offset_bottom = 395.0
text = "Vyberte svoji uloženou hru:"
horizontal_alignment = 1

[connection signal="button_up" from="next" to="." method="_on_next_button_up"]
[connection signal="button_up" from="previous" to="." method="_on_previous_button_up"]
[connection signal="button_up" from="load" to="." method="_on_load_button_up"]
[connection signal="button_up" from="main_menu" to="." method="_on_main_menu_button_up"]
[connection signal="button_up" from="delete" to="." method="_on_delete_button_up"]
